# polymarket-explorer

./: .gitignore  Cargo.toml  ERROR_HANDLING.md
src/: error.rs  main.rs
src/adapters/: http_client.rs  mod.rs  parquet_reader.rs
src/cli/: commands.rs  handlers.rs  mod.rs  output.rs
src/data_sources/: mod.rs
src/data_sources/local_db/: handler.rs  mod.rs  standardizer.rs
src/data_sources/polymarket_api/: handler.rs  mod.rs  standardizer.rs  types.rs
src/standard_data/: mod.rs  models.rs  providers.rs
