[package]
name = "polymarket-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.89"

# Error handling
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
